# Doe

install/: local_setup.sh  setup.sh
install/doe_simulation/share/doe_simulation/: package.dsv  package.ps1  package.sh
log/: latest_build
src/doe_control/: CMakeLists.txt
src/doe_control/include/doe_control/: thrust_publisher.hpp
src/doe_control/install/: local_setup.sh  setup.sh
src/doe_control/install/doe_control/share/doe_control/: local_setup.sh  package.sh
src/doe_control/install/doe_control/share/doe_control/config/: thruster_config.yaml
src/doe_control/install/doe_control/share/doe_control/launch/: thrust_allocator_launch.py
src/doe_control/launch/: thrust_publisher_launch.py
src/doe_control/log/: latest_build  latest_test
src/doe_control/src/: thrust_publisher.cpp
src/doe_simulation/: CMakeLists.txt  README.md
src/doe_simulation/include/doe_simulation/: thruster_driver_plugin.hpp
src/doe_simulation/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
src/doe_simulation/install/doe_simulation/lib/doe_simulation/: cpp_executable
src/doe_simulation/install/doe_simulation/share/ament_index/resource_index/package_run_dependencies/: doe_simulation
src/doe_simulation/install/doe_simulation/share/ament_index/resource_index/parent_prefix_path/: doe_simulation
src/doe_simulation/install/doe_simulation/share/doe_simulation/: local_setup.sh  package.sh  package.xml
src/doe_simulation/install/doe_simulation/share/doe_simulation/cmake/: doe_simulationConfig.cmake
src/doe_simulation/install/doe_simulation/share/doe_simulation/gazebo/models/: steelhead.sdf
src/doe_simulation/install/doe_simulation/share/doe_simulation/gazebo/models/triton_auv/: model.sdf
src/doe_simulation/install/doe_simulation/share/doe_simulation/gazebo/models/triton_auv/install/: local_setup.sh  setup.ps1  setup.sh
src/doe_simulation/install/doe_simulation/share/doe_simulation/gazebo/models/triton_auv/log/: latest_build
src/doe_simulation/install/doe_simulation/share/doe_simulation/gazebo/models/triton_frame/: model.sdf
src/doe_simulation/install/doe_simulation/share/doe_simulation/gazebo/models/triton_thruster/: model.sdf
src/doe_simulation/install/doe_simulation/share/doe_simulation/gazebo/worlds/: competition.world  cube.world
src/doe_simulation/launch/: gazebo_launch.py
src/doe_simulation/log/: latest_build
src/doe_simulation/models/cube_auv/: model.config  model.sdf
src/doe_simulation/src/: thruster_driver_plugin.cpp
src/doe_simulation/worlds/: competition.world  cube.world
src/doe_teleop/: package.xml  setup.cfg  setup.py
src/doe_teleop/doe_teleop/: keyboard_teleop.py
src/doe_teleop/install/: local_setup.sh  setup.sh
src/doe_teleop/install/doe_teleop/lib/doe_teleop/: keyboard_teleop
src/doe_teleop/install/doe_teleop/share/doe_teleop/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/doe_teleop/launch/: keyboard_teleop_launch.py
src/doe_teleop/log/: latest_build
